fixed bug of breaking navigation on small resolutions

--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -114,7 +114,8 @@ label {
 #topmenu {
     float: left;
     color: #fff;
-    padding-top: 40px;
+    position: relative;
+    top: 15px;
     font-size: 16px;
     height: 60px;
     width: 575px;
